testing if position fixed fixes issue of overflow

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -30,7 +30,7 @@ body {
 
 /* Parallax / background */
 section img {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
@@ -457,19 +457,19 @@ p {
 
 @media (max-width: 767px) { /* Sizes for mobile devices */
   h1 {
-    font-size: 4rem;
+    font-size: 3.9rem;
   }
   
   h2 {
-    font-size: 2.2rem;
+    font-size: 2.1rem;
   }
 
   h3 {
-    font-size: 1rem;
+    font-size: 0.9rem;
   }
 
   p {
-    font-size: 0.8rem;
+    font-size: 0.75rem;
   }
 
   /* parallax shift */
